src/app/product/product.component.scss
.example-card {
    max-width: 400px;
  }

  h1 {
    font-family: title;
    font-size: 3em;
  }
  
  .btn {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 10%;
    margin: auto;
  }

  .nike {
    background-image: url('../../assets/nike.jpg');
    background-size: cover;
  }

  .Puma {
    background-image: url('../../assets/puma.jpg');
    background-size: cover;
  }

  .discount {
    color: red;
  }

  .on-discount {
    text-decoration: line-through;
}

.price-section {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.price-section > p {
    margin: 5px;
}


.example-container {
    overflow-y: hidden;
  }
  
  mat-drawer-content {
    overflow-y: hidden;

  }

  mat-drawer {
    width: 30%;

  }

  .filter {
    display: flex;
    align-items: center;
    width: 10%;
    margin: auto;
  }

